--- a/web/pset8/2nd/cv.html
+++ b/web/pset8/2nd/cv.html
@@ -1,1 +1,78 @@
-<p>Hello, CV!</p>
+<!DOCTYPE html>
+<meta charset="UTF-8">
+
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+    <link href="styles.css" rel="stylesheet">
+
+    <script src="./index.js"></script>
+
+    <title>Hello, world!</title>
+</head>
+
+<body>
+
+    <div class="navDiv">
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link active" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="cv.html">CV</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="freinds.html">Friends</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="hobbies.html">Hobbies</a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">Work</h5>
+                <small>Now</small>
+            </div>
+            <p class="mb-1">Currently working at Company.</p>
+        </a>
+        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">University</h5>
+                <small class="text-muted">1 year ago</small>
+            </div>
+            <p class="mb-1">A University in Nania maybe?.</p>
+        </a>
+        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">Highschool</h5>
+                <small class="text-muted">6 years</small>
+            </div>
+            <p class="mb-1">Unfortunately not Hogwards.</p>
+        </a>
+        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">Primaryschool </h5>
+                <small class="text-muted">12 years</small>
+            </div>
+            <p class="mb-1">The one where Skinner is the principal.</p>
+        </a>
+    </div>
+    <p>Note: of course this is all made up. But I do not know who can see this page.</a>.
+    </p>
+
+</body>
